[package]
name = "emeraldc-parse-tree-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
emeraldc-parser = { path = "../emeraldc-parser" }
emeraldc-lexer = { path = "../emeraldc-lexer" }
serde = { version = "1.0.219", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
